--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 log = "0.4.17"
 env_logger = "0.10.0"
+thiserror = "1.0.39"
 chrono = "0.4.23"
 tokio = { version = "1.22.0", features = ["full"] }
 async_zmq = "0.3.3"
